...
    const val FAVOURITES_CPI: String = "Favourites circular progress indicator"
    const val PRODUCT_DETAILS_TOP_BAR: String = "Product details top bar"
    const val PRODUCT_ITEM_TITLE: String = "Product item title"
    const val PRODUCT_DETAILS_IMAGE_BOX: String = "Product details image item"
    const val PRODUCT_DETAILS_BOTTOM_SHEET: String = "Product details bottom sheet"
    const val PRODUCT_DETAILS_CPI: String = "Product details circular progress indicator"
    const val SIGNUP_CONTENT: String = "Signup content"
    const val SIGNUP_TOP_BAR: String = "Signup top bar"
    const val SIGNUP_COLUMN: String = "Signup column"
    const val SIGNUP_EMAIL_TF: String = "Signup email"
    const val SIGNUP_PASSWORD_TF: String = "Signup password"
    const val SIGNUP_CONFIRM_PASSWORD_TF: String = "Signup confirm password"
    const val SIGNUP_FIRSTNAME_TF: String = "Signup first name"
    const val SIGNUP_LASTNAME_TF: String = "Signup last name"
    const val SIGNUP_STREET_TF: String = "Signup street"
    const val SIGNUP_CITY_TF: String = "Signup city"
    const val SIGNUP_ZIP_CODE_TF: String = "Signup zip code"
    const val SIGNUP_BTN: String = "Signup button"
    const val SIGNUP_CPI: String = "Signup circular progress indicator"
    const val USER_NOT_LOGGED_IN_CONTENT: String = "User not logged in content"
    const val CART_CONTENT: String = "Cart content"
    const val CART_TOP_BAR: String = "Cart top bar"
    const val CART_LAZY_COLUMN: String = "Cart lazy column"
    const val PLUS_BTN: String = "Plus button"
...
